# synapsemem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py  synapsemem.db
benchmarks/: benchmark_ingest.py  benchmark_prompt.py  benchmark_quality.py  benchmark_report_v0_1.md  benchmark_retrieve.py  benchmark_sleep.py  run_all.py  sample_data.py
examples/: chatbot_demo.py  demo_real.py  notebook.ipynb
src/: schema.py
synapsemem/: __init__.py  config.py  manager.py
synapsemem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
synapsemem/async_pipeline/: __init__.py  beat_schedule.py  celery_app.py  tasks.py
synapsemem/cli/: __init__.py  synapsemem_cli.py
synapsemem/dashboards/: __init__.py  api.py
synapsemem/dashboards/react_frontend/src/: App.tsx
synapsemem/graph/: __init__.py  graph_builder.py  query_engine.py  relationship_rules.py
synapsemem/integrations/: __init__.py  crewai_integration.py  langchain_integration.py
synapsemem/memory/: __init__.py  anchors.py  base_storage.py  chroma_storage.py  consolidator.py  decay.py  extractor.py  ingest_consolidator.py  intent_classifier.py  memory_compressor.py  qdrant_storage.py  retriever.py  shared_memory.py  sleep_consolidator.py  sqlite_storage.py  storage.py
synapsemem/prompt/: __init__.py  builder.py  templates.py
synapsemem/utils/: __init__.py  embeddings.py  logging.py  scorer.py  tokenizer.py
tests/: __init__.py  test_decay.py  test_end_to_end.py  test_extraction.py  test_phase3_step1_vector_adapters.py  test_phase3_step2_async_pipeline.py  test_phase3_step3_shared_memory.py  test_phase3_step4_compression.py  test_phase3_step5_integrations.py  test_prompt.py  test_retrieval.py
