[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapsemem"
version = "0.1.0"
description = "A lightweight neuro-symbolic memory engine for LLM agents."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Shubham Raj" }
]
keywords = [
  "llm",
  "memory",
  "ai-agents",
  "rag",
  "knowledge-graph",
  "neuro-symbolic"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
  "sentence-transformers>=2.7.0"
]

[project.optional-dependencies]
dashboard = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0"
]
dev = [
  "pytest>=8.0.0",
  "build>=1.2.1",
  "twine>=5.1.0"
]

[project.scripts]
synapsemem = "synapsemem.cli.synapsemem_cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["synapsemem*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]