[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapsemem"
version = "0.3.0"
description = "A bio-inspired, production-ready memory engine for LLM agents."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Shubham Raj" }
]
keywords = [
  "llm",
  "memory",
  "ai-agents",
  "rag",
  "knowledge-graph",
  "neuro-symbolic",
  "vector-database",
  "multi-agent",
  "langchain",
  "crewai"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

# Minimal install — just the core memory engine + embeddings
dependencies = [
  "sentence-transformers>=2.7.0"
]

[project.optional-dependencies]

# pip install synapsemem[dashboard]
dashboard = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0"
]

# pip install synapsemem[vector]
vector = [
  "qdrant-client>=1.9.0",
  "chromadb>=0.5.0"
]

# pip install synapsemem[async]
async = [
  "celery>=5.4.0",
  "redis>=5.0.0"
]

# pip install synapsemem[langchain]
langchain = [
  "langchain>=0.2.0",
  "langchain-core>=0.2.0"
]

# pip install synapsemem[crewai]
crewai = [
  "crewai>=0.51.0",
  "crewai-tools>=0.8.0"
]

# pip install synapsemem[dev]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "build>=1.2.1",
  "twine>=5.1.0"
]

# pip install synapsemem[all]
all = [
  "synapsemem[dashboard,vector,async,langchain,crewai]"
]

[project.urls]
Homepage = "https://github.com/shubhammmgithub/synapsemem"
Issues = "https://github.com/shubhammmgithub/synapsemem/issues"

[project.scripts]
synapsemem = "synapsemem.cli.synapsemem_cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["synapsemem*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"